fix: :adhesive_bandage: card actions spacing

--- a/src/app/movies/components/movie-card/movie-card.component.scss
+++ b/src/app/movies/components/movie-card/movie-card.component.scss
@@ -1,8 +1,12 @@
 .card-actions {
   display: flex;
   justify-content: flex-end;
-  gap: 0.25rem;
-  padding-right: 1px;
+  gap: 0.375rem;
+  padding: 0.375rem;
+
+  ion-button{
+    margin: 0;
+  }
 }
 
 img {
